# ChangeLog for dev-perl/XML-LibXML
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.138 2012/06/24 13:00:32 tove Exp $

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  09 Jun 2012; Torsten Veller <tove@gentoo.org> XML-LibXML-1.900.0.ebuild:
  Fix t/03doc.t test failure with recent libxml2. Reported by Nikoli in bug
  #420313

*XML-LibXML-1.990.0 (31 May 2012)

  31 May 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.990.0.ebuild:
  Version bump

*XML-LibXML-1.980.0 (14 May 2012)

  14 May 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.980.0.ebuild:
  Version bump

  09 May 2012; Alexis Ballier <aballier@gentoo.org> XML-LibXML-1.970.0.ebuild:
  keyword ~amd64-fbsd

*XML-LibXML-1.970.0 (02 May 2012)

  02 May 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.970.0.ebuild:
  Version bump

  31 Mar 2012; Torsten Veller <tove@gentoo.org> -XML-LibXML-1.70.ebuild,
  -XML-LibXML-1.950.0.ebuild:
  Cleanup

  18 Mar 2012; Raúl Porcel <armin76@gentoo.org> XML-LibXML-1.900.0.ebuild:
  alpha/ia64/s390/sh/sparc stable wrt #404343

*XML-LibXML-1.960.0 (17 Mar 2012)

  17 Mar 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.960.0.ebuild:
  Version bump

  06 Mar 2012; Brent Baude <ranger@gentoo.org> XML-LibXML-1.900.0.ebuild:
  Marking XML-LibXML-1.900.0 ppc for bug 404343

  06 Mar 2012; Torsten Veller <tove@gentoo.org> -XML-LibXML-1.910.0.ebuild,
  -XML-LibXML-1.930.0.ebuild, -XML-LibXML-1.940.0.ebuild:
  Cleanup

*XML-LibXML-1.950.0 (06 Mar 2012)

  06 Mar 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.950.0.ebuild:
  Version bump

*XML-LibXML-1.940.0 (04 Mar 2012)

  04 Mar 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-1.940.0.ebuild:
  Version bump

  03 Mar 2012; Markus Meier <maekke@gentoo.org> XML-LibXML-1.900.0.ebuild:
  arm stable, bug #404343
