@@ -7,17 +7,19 @@ DIST XML-LibXML-1.96.tar.gz 441094 RMD160 e130fce12809046b939006587c8565f0f28b2b
 DIST XML-LibXML-1.97.tar.gz 441572 RMD160 6adadd6523393b6994fe64d606fe057dc2d710a6 SHA1 1b9afa42ee35aec72f7715db960e71c41d302b6e SHA256 043d2deb952b018a7b6398c470054ce4d76b125de0a684eff27009dfaaac6914
 DIST XML-LibXML-1.98.tar.gz 441894 RMD160 6ad7f72bf32b1bd04b4f3c3bc1bc81c162a39f87 SHA1 3bfbf154645b2f5be861989ee447ecaf2d4fcc10 SHA256 6f2cbfdaa7b626bb356f3b6f9b0fc9e6dcc3fed91cbdb0bebec2319245ab6ad9
 DIST XML-LibXML-1.99.tar.gz 443263 RMD160 c43b0eb5245992b346dcfa5d8d78edece7bb4459 SHA1 7302f1b74270aec251e642220276abb2c96d318d SHA256 05f21424346d658c8a642ef6b91db9fca41a3f57be4bf38fee4af1d099e55c8e
+DIST XML-LibXML-2.0001.tar.gz 444112 RMD160 f44dd3f8fdb7cb8b23f5c23020c3ab7100514c2a SHA1 c46c77c21012013a0d8ac84d72a0fea6dcde1548 SHA256 a627f0b7443bb178cdbd4795f1f57467f89d16c781b3c28253df87512276a4ff
 EBUILD XML-LibXML-1.900.0.ebuild 1963 RMD160 f8110c434fc118646b1d2ad66dea015d744989c6 SHA1 72c821a4d176ba066fb95fa58582ec26fe2c0d2a SHA256 2beb8d0b8c4206cb7eab76a0c47f88c458dbce644d48df61fd12e0654b3fd320
 EBUILD XML-LibXML-1.960.0.ebuild 1759 RMD160 117d85317cb602b36bbaae117b03066e7584903e SHA1 e796368fb488df9eb5f8610e7fc8073abcbf5ffd SHA256 27e474c910625346163ab5f01ffcbe921f243575ec8631d48cf15c3b858762e7
 EBUILD XML-LibXML-1.970.0.ebuild 1775 RMD160 6028ba7d6ce81fc629ae774d5b8b6a48c60e81b2 SHA1 eed8c103c18a4c0ff164ae06224ce81ea07f21c8 SHA256 bf4af5ed7912d773c2aeb5e6befab656dae6c0b6510ba87705981e177e0400e3
 EBUILD XML-LibXML-1.980.0.ebuild 1771 RMD160 2427c703b6afd17456484a090037a41b8716a251 SHA1 63a69bd5acd464a0d2231547e2d6296a3f1a0097 SHA256 b4e700b54048b773e0e2f290403cca68c22881d6c8e6bb1ca8b2fba93e76ccbf
 EBUILD XML-LibXML-1.990.0.ebuild 1771 RMD160 14733dc944020770d803029416f29375932c38c9 SHA1 beac5a980fc794e4d6d1f1de11c851af4a2c76a4 SHA256 246bfdf627b22f294c5398d09d1cfe739f34c9b80f9fe4ff4f8536d0a9e7c26a
-MISC ChangeLog 17072 RMD160 56161a2696c023da2f71bf29c960da82545c017f SHA1 6be09143d895b3faad6a4dc22e7dc117dc2db7c3 SHA256 9eb7bb36ea67f101f2eea26f09260abbf1de0deede3dde3c0d9be05d1d19f20c
+EBUILD XML-LibXML-2.0.100.ebuild 1773 RMD160 27fe81de5bc9c36336d689925d865b4497198b12 SHA1 0023a6b5efd511fe4b458931200bc5bb57d207b5 SHA256 ebbffe57339adb308e5027260915ef964573ad5ad332c1d8699e7095bdb962bf
+MISC ChangeLog 17199 RMD160 75a03e4cd0d93c4f0e6d75c3059519c75fd83437 SHA1 a1ce5a5c1f31a86a98b42691948d3757570a9fee SHA256 2bec6cdb4919c979ef439d792aaddfd04a7d8795af1310be6e4f533dc35ada71
 MISC metadata.xml 2684 RMD160 d2ab9a69753e5f2a471c3bd30c2603705820005e SHA1 73510dd29c66e0f9c2131e5f18042f73695539f0 SHA256 9a2b5db574916cea3f54b39ab4314eb0ced9b1584eae248619c963940f3f3450
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAk/nD5oACgkQV3J2n04Eauxv2QCfdsG1KNj3CFyZfYhqLlAwmuTd
-db4AoLWd8zSF0qY0VP02+KdtjEAowB6I
-=YheX
+iEYEAREIAAYFAk/nNa8ACgkQV3J2n04EauzXJwCeMQSbxxjymvqPnUwJmyAb5X3e
+KXsAn37bJirl1Kx4Tnx1w9IeKbI4vSL8
+=e9KP
 -----END PGP SIGNATURE-----
