@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/XML-LibXML
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.138 2012/06/24 13:00:32 tove Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/XML-LibXML/ChangeLog,v 1.139 2012/06/24 15:43:37 tove Exp $
+
+*XML-LibXML-2.0.100 (24 Jun 2012)
+
+  24 Jun 2012; Torsten Veller <tove@gentoo.org> +XML-LibXML-2.0.100.ebuild:
+  Version bump
 
   24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Update CPAN upstream info
